--- a/Hunt 2021 1.ipynb
+++ b/Hunt 2021 1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,11 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel('.xlsx')\n",
+    "df = pd.read_excel('hunt_1.xlsx')\n",
     "df = df.rename(columns=lambda x:x.replace('(Hunt)', 'H'))\n",
     "df = df.rename(columns=lambda x:x.replace('(Purchase)', 'P'))\n",
     "df = df.rename(columns=lambda x:x.replace(' ', '_'))\n",
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remove = ['I am HADES', 'Emilia10','Yuzuuun', 'B1tchPls', 'BuD WeiseR', 'WrranglerAlt', 'miraretaLOL', 'Shoya Ishida']\n",
+    "add = 0\n",
+    "for member in Guild.roster:\n",
+    "    if member.name in remove:\n",
+    "        x = 100 - member.points\n",
+    "        member.points += x\n",
+    "        print(f'{member} points have been updated')\n",
+    "        add += x\n",
+    "for member in Guild.roster:\n",
+    "    if member.name == \"Total\":\n",
+    "        member.points =- add\n",
+    "        print(f'{add} points removed from the total')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,9 +307,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top Hunter Breakdown\n",
+      "        Name: TheSun90\n",
+      "        Total Gifts: 59\n",
+      "        Hunts: 57\n",
+      "        Level 1s: 0\n",
+      "        Level 2s: 49\n",
+      "        Level 3s: 8\n",
+      "        Level 4s: 0\n",
+      "        Level 5s: 0\n",
+      "        Total Points: 141\n",
+      "\n",
+      "========================================\n",
+      "\n",
+      "Top Gifter Breakdown\n",
+      "        Name: Highgarden\n",
+      "        Hunts: 33\n",
+      "        Packs: 84\n",
+      "        Total Gifts: 117\n",
+      "        Total Points: 413\n",
+      "\n",
+      "========================================\n",
+      "\n",
+      "Top Buyer Breakdown\n",
+      "        Name: Highgarden\n",
+      "        Total Gifts: 117\n",
+      "        Packs: 84\n",
+      "        White: 2\n",
+      "        Green: 47\n",
+      "        Blue: 29\n",
+      "        Purple: 6\n",
+      "        Gold: 0\n",
+      "        Total Points: 413\n",
+      "\n",
+      "========================================\n",
+      "\n",
+      "Top Points Breakdown\n",
+      "        Name: Yongjin198\n",
+      "        Hunts: 21\n",
+      "        Packs: 56\n",
+      "        Total Gifts: 77\n",
+      "        Total Points: 422\n",
+      "\n",
+      "========================================\n",
+      "\n",
+      "Total Breakdown\n",
+      "        Gifts: 3301\n",
+      "        Hunts: 1898\n",
+      "        Purchases: 1403\n",
+      "        Level 1s: 14\n",
+      "        Level 2s: 1138\n",
+      "        Level 3s: 512\n",
+      "        Level 4s: 69\n",
+      "        Level 5s: 179\n",
+      "        White: 228\n",
+      "        Green: 863\n",
+      "        Blue: 263\n",
+      "        Purple: 39\n",
+      "        Gold: 10\n",
+      "        Total Points: 10751\n",
+      "\n",
+      "========================================\n",
+      "\n",
+      "Anonymous Breakdown\n",
+      "        Gifts: 81\n",
+      "        Hunts: 0\n",
+      "        Purchases: 81\n",
+      "        Level 1s: 1\n",
+      "        Level 2s: 0\n",
+      "        Level 3s: 0\n",
+      "        Level 4s: 0\n",
+      "        Level 5s: 0\n",
+      "        White: 9\n",
+      "        Green: 48\n",
+      "        Blue: 17\n",
+      "        Purple: 5\n",
+      "        Gold: 2\n",
+      "        Total Points: 245\n",
+      "\n",
+      "========================================\n",
+      "\n",
+      "Daily average Breakdown\n",
+      "    Total Gifts: 471.57\n",
+      "    Hunts: 271.14\n",
+      "    Purchases: 200.43\n",
+      "    Level 1s: 2.0\n",
+      "    Level 2s: 162.57\n",
+      "    Level 3s: 73.14\n",
+      "    Level 4s: 9.86\n",
+      "    Level 5s: 25.57\n",
+      "    Total Points: 1535.86\n",
+      "\n",
+      "========================================\n",
+      "\n",
+      "-What it means to be on the naughty list-\n",
+      "    For each hunt report, we translate the gifts from each member into points:\n",
+      "    Loot                |  Bonus \n",
+      "    level 1 : 0 points  |  White  : 1 point\n",
+      "    Level 2 : 2 points  |  Green  : 2 points\n",
+      "    Level 3 : 5 points  |  Blue   : 5 points\n",
+      "    Level 4 : 7 points  |  Purple : 7 points\n",
+      "    Level 5 : 10 points |  Gold   : 10 points\n",
+      "    10 points per day required - 70 points per week.\n",
+      "    Each week starts at midnight EST on Sunday.\n",
+      "    If your name is listed below, it means that you did not reach the gift requirements. \n",
+      "    The number shown is the amount of points you are missing for this week.\n",
+      "\n",
+      "There are 47 members on the naughty list\n",
+      "\n",
+      "OversoulXx is missing 13 points worth of gifts for this week.\n",
+      "Yazid Muslim is missing 14 points worth of gifts for this week.\n",
+      "Futt Bucker is missing 33 points worth of gifts for this week.\n",
+      "Tyron G is missing 5 points worth of gifts for this week.\n",
+      "Hendricks00 is missing 12 points worth of gifts for this week.\n",
+      "S L I M E is missing 13 points worth of gifts for this week.\n",
+      "Mr Hai GeGe is missing 8 points worth of gifts for this week.\n",
+      "WrranglerAlt is missing 38 points worth of gifts for this week.\n",
+      "UltronZ is missing 11 points worth of gifts for this week.\n",
+      "Mi Bae is missing 52 points worth of gifts for this week.\n",
+      "Call me Neo is missing 10 points worth of gifts for this week.\n",
+      "Simicka111 is missing 33 points worth of gifts for this week.\n",
+      "w KING w is missing 22 points worth of gifts for this week.\n",
+      "Cosmin499 is missing 40 points worth of gifts for this week.\n",
+      "Gonww is missing 37 points worth of gifts for this week.\n",
+      "ShakeBurn is missing 28 points worth of gifts for this week.\n",
+      "L0RD KAN0N is missing 10 points worth of gifts for this week.\n",
+      "CHSBank is missing 20 points worth of gifts for this week.\n",
+      "Figurehead is missing 48 points worth of gifts for this week.\n",
+      "alek sander is missing 14 points worth of gifts for this week.\n",
+      "MrBoose is missing 1 points worth of gifts for this week.\n",
+      "MR savage 6 is missing 33 points worth of gifts for this week.\n",
+      "Sandokam is missing 10 points worth of gifts for this week.\n",
+      "Wendigo1 is missing 14 points worth of gifts for this week.\n",
+      "command01 is missing 58 points worth of gifts for this week.\n",
+      "razvan20 is missing 4 points worth of gifts for this week.\n",
+      "Mashaakel is missing 11 points worth of gifts for this week.\n",
+      "Imafukyoface is missing 30 points worth of gifts for this week.\n",
+      "AL BooZ is missing 47 points worth of gifts for this week.\n",
+      "CHIP B A B Y is missing 50 points worth of gifts for this week.\n",
+      "PapaRangeR is missing 48 points worth of gifts for this week.\n",
+      "MASAOkun is missing 56 points worth of gifts for this week.\n",
+      "W Zeta is missing 48 points worth of gifts for this week.\n",
+      "WeakSauce1 is missing 58 points worth of gifts for this week.\n",
+      "D1CKHEAD is missing 60 points worth of gifts for this week.\n",
+      "miraretaLOL is missing 68 points worth of gifts for this week.\n",
+      "RAZ ALGUL is missing 56 points worth of gifts for this week.\n",
+      "I am HADES is missing 64 points worth of gifts for this week.\n",
+      "Emilia10 is missing 56 points worth of gifts for this week.\n",
+      "Yuzuuun is missing 61 points worth of gifts for this week.\n",
+      "Luckylionblu is missing 40 points worth of gifts for this week.\n",
+      "Shoya Ishida is missing 45 points worth of gifts for this week.\n",
+      "Righteoussin is missing 65 points worth of gifts for this week.\n",
+      "lonely bean is missing 64 points worth of gifts for this week.\n",
+      "B1tchPls is missing 46 points worth of gifts for this week.\n",
+      "BuD WeiseR is missing 67 points worth of gifts for this week.\n",
+      "AL BooZz is missing 60 points worth of gifts for this week.\n"
+     ]
+    }
+   ],
    "source": [
     "get_report()"
    ]
